added list on both sides

--- a/index.html
+++ b/index.html
@@ -6,10 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rename</title>
     <link rel="stylesheet" href="style.css">
+    <h1 id="title">TODO</h1> 
 </head>
 <body>
-    <div id="map">
-        <img src="./assets/mapbackground.jpg" alt=""/>
+    <div id="container">
+        <section id="left">
+            <ul id="left-list">
+                <!-- append left list here -->
+            </ul>
+        </section>
+        <section id="map">
+            <img src="./assets/mapbackground.jpg" alt=""/>
+        </section>
+        <section id="right">
+            <ul id="right-list">
+                <!-- append right list here -->
+            </ul>
+        </section>
     </div>
     <script defer src="index.js"></script>
 </body>
