fixed minor html element position

--- a/index.html
+++ b/index.html
@@ -20,17 +20,8 @@
         </section>
         <section>
             <div id="box">
-                <img id="flag" src="https://cdn.britannica.com/22/5122-004-89773429/Flag-Saint-Kitts-and-Nevis.jpg"/>
                 <div>
-                    <h1 id="location">Dominica</h1>
-                    <ul id="attractions">
-                        <h1>Attractions</h1>
-                        <!-- remove later -->
-                        <li>attraction</li>
-                        <li>attraction2</li>
-                        <li>attraction2</li>
-                    </ul>
-                </div>
+                <img id="flag" src="https://cdn.britannica.com/22/5122-004-89773429/Flag-Saint-Kitts-and-Nevis.jpg"/>
                 <ul id="island-info" >
                     <li>Language: English</li>
                     <li>Status: Independent</li>
@@ -38,6 +29,17 @@
                     <li>Capital: Roseau</li>
                     <li>Population: 72,412</li>
                 </ul>
+                </div>
+                <div>
+                    <h1 id="location">Dominica</h1>
+                    <ul id="attractions">
+                        <h1>Attractions</h1>
+                        <!-- remove later -->
+                        <li>Mount Scenery</li>
+                        <li>Windwardside</li>
+                        <li>Saba National Marine Park</li>
+                    </ul>
+                </div>
             </div>
         </section>
         <section id="right">
