--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
                 </form>
                 </div>
                 <div id="row2">
-                    <h1 id="location">Dominica</h1>
+                    <h1 id="location"></h1>
                     <ul id="attractions">
                         <h1>Attractions</h1>
                     </ul>
                     <ul id="comments">Reviews:
+
                     </ul>
 
                     
