--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <ul id="attractions">
                         <h2>Attractions</h2>
                     </ul>
-                    <ul id="comments">Reviews:
+                    <ul id="comments" size="+2">Reviews:
 
                     </ul>
 
